Fixed layout shift when scroll appears, fixed issues related to object interfaces of useState data

--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,7 +1,7 @@
 .footer {
     background-color: #F5F7F8;
     height: 100%;
-    width: 100%;
+    width: 100vw;
     margin-top: 10vh;
     font-weight: 500;
     font-size: 14px;
