--- a/src/components/HomePage/HomePage.css
+++ b/src/components/HomePage/HomePage.css
@@ -5,6 +5,7 @@
 .home__banner {
     background-image: url("../../assets/images/background2.jpg");
     height: 70vh;
+    width: 100vw;
     background-position: center center;
     background-repeat: no-repeat;
     background-size: cover;
@@ -12,6 +13,7 @@
 
 .home__new, .home__coming, .home__bestsellers {
     font-family: "Archivo Black", sans-serif;
+    width: 100vw;
     font-weight: 400;
     font-style: normal;
     margin-top: 10vh;
