--- a/src/components/Nav/Nav.css
+++ b/src/components/Nav/Nav.css
@@ -82,14 +82,20 @@
 .nav {
     height: 50px;
     width: 100vw;
-    margin: auto;
-    display: flex;
     background-color: white;
-    justify-content: space-between;
-    align-items: center;
     -webkit-box-shadow: 0px 5px 20px 0px rgba(210, 210, 210, 1);
     -moz-box-shadow: 0px 5px 20px 0px rgba(210, 210, 210, 1);
     box-shadow: 0px 5px 20px 0px rgba(210, 210, 210, 1);
+}
+
+.nav__container {
+    width: 97%;
+    height: 50px;
+    background-color: transparent;
+    margin: auto;
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
 }
 
 .nav__burger {
